SERVER-1418 Shard names now use padding zeroes