jstests/sharding/findandmodify1.js
@@ -27,8 +27,8 @@ for (var i=2; i < numObjs; i+=2){
 
 s.printChunks();
 assert.eq( numObjs/2, s.config.chunks.count(), "split failed" );
-assert.eq( numObjs/4, s.config.chunks.count({ shard: "shard0" }) );
-assert.eq( numObjs/4, s.config.chunks.count({ shard: "shard1" }) ); 
+assert.eq( numObjs/4, s.config.chunks.count({ shard: "shard0000" }) );
+assert.eq( numObjs/4, s.config.chunks.count({ shard: "shard0001" }) ); 
 
 // update
 for (var i=0; i < numObjs; i++){
